Fix input style in Blocks checkout
On a different theme, the input may look strange. We're adding a class to try to make it look as it should.

--- a/client/settings/phone-input/style.scss
+++ b/client/settings/phone-input/style.scss
@@ -48,6 +48,10 @@
 			max-height: 21.875rem;
 		}
 
+		> div {
+			margin-top: 0;
+		}
+
 		.additional-information {
 			font-size: 0.875rem;
 		}
